<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_catalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_master_sword"
        android:title="@string/item_list_title" />

    <item
        android:id="@+id/bottom_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_heart_container"
        android:title="@string/fav_item_list_title" />

    <item
        android:id="@+id/bottom_userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_link_profile"
        android:title="@string/user_info_title" />

</menu>
