<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CreditFragment">

    <TextView
        android:id="@+id/tvCreditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/linlayDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCreditTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/round_light_mode_24"
            android:contentDescription="@string/img_description_light" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/round_dark_mode_24"
            android:contentDescription="@string/img_description_dark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlayLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linlayDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvLanguageEN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_en"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingEnd="10dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

        <TextView
            android:id="@+id/tvLanguageES"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_es"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingStart="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnContactSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_contact_support"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/linlayLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>


    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
