<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    tools:context=".LoginFragment">

    <!-- Mensaje de bienvenida -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_main_welcome"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="60dp"
        android:autofillHints="username"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/et_main_hint"
        android:inputType="text"
        android:maxLength="50"
        android:minHeight="56dp"
        android:paddingHorizontal="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="92dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/primaryColor"
        android:elevation="4dp"
        android:outlineProvider="background"
        android:padding="12dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:stateListAnimator="@null"
        android:text="@string/btn_main_login"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>
